:lipstick: Fixed minor spacing issue

--- a/src/css/components/input-switch.pcss
+++ b/src/css/components/input-switch.pcss
@@ -72,7 +72,7 @@
 	}
 
 	&--off {
-		right: var(--s_switch--size) + var(--s_switch--border);
+		right: calc(var(--s_switch--size) + var(--s_switch--border));
 		transform: scale(1);
 	}
 
